[package]
name = "bcml-installer"
version = "0.1.1"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
glob = "0.3"
native-windows-gui = "1.0"
native-windows-derive = "1.0"
winapi = "0.3"
winreg = "0.8"
